[package]
name = "nekobots"
version = "0.1.0"
edition = "2021"
authors = ["Coleman Kane <ckane@colemankane.org>"]
license = "MIT"
keywords = ["science", "simulation", "ecology"]
repository = "https://github.com/ckane/nekobots"
description = "A simple ecosystem simulator employing bots and food, in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25" }
nanorand = { version = "0.7" }
clap = { version = "4.0", features = [ "derive" ] }
